--- a/C2/w2/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/C2/w2/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -77,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2016-03-20 19:04:17,544 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.4 started. Logging: /tmp/graphlab_server_1458497055.log\n"
+      "2016-03-20 21:19:40,038 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.4 started. Logging: /tmp/graphlab_server_1458505178.log\n"
      ]
     },
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -423,10 +423,10 @@
     "            deriv = feature_derivative(errors, feature_matrix[:,i])\n",
     "\n",
     "            # add the squared value of the derivative to the gradient sum of squares (for assessing convergence)\n",
-    "            gradient_sum_squares = deriv**2\n",
+    "            gradient_sum_squares += deriv**2\n",
     "            # subtract the step size times the derivative from the current weight\n",
-    "            weights[i] = weights[i] - step_size * deriv\n",
-    "            \n",
+    "            #weights[i] = weights[i] - step_size * deriv\n",
+    "            weights -= step_size * deriv\n",
     "        # compute the square-root of the gradient sum of squares to get the gradient matnigude:\n",
     "        gradient_magnitude = sqrt(gradient_sum_squares)\n",
     "        if gradient_magnitude < tolerance:\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -501,16 +501,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-46999.88716555    281.91211912]\n"
+     "ename": "ValueError",
+     "evalue": "shapes (17384,2) and (3,) not aligned: 2 (dim 1) != 3 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-e48c2ddda424>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mw2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregression_gradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimple_feature_matrix\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minitial_weights\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mw2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-31-aab738ff0832>\u001b[0m in \u001b[0;36mregression_gradient_descent\u001b[0;34m(feature_matrix, output, initial_weights, step_size, tolerance)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mconverged\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;31m# compute the predictions based on feature_matrix and weights using your predict_output() function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_matrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;31m# compute the errors as predictions - output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0merrors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-015080bba685>\u001b[0m in \u001b[0;36mpredict_output\u001b[0;34m(feature_matrix, weights)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# assume feature_matrix is a numpy matrix containing the features as columns and weights is a corresponding numpy array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# create the predictions vector by using np.dot()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_matrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;31m#predictions = np.dot(weights, feature_matrix)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (17384,2) and (3,) not aligned: 2 (dim 1) != 3 (dim 0)"
      ]
     }
    ],
@@ -537,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -555,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -573,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -592,7 +598,7 @@
        "4229"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -622,7 +628,7 @@
        "4229"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -685,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -701,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -724,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -735,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -753,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -762,8 +768,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -9.99999688e+04   2.45035462e+02   6.53198581e+01]\n",
-      "[ -9.99999388e+04   2.29038507e+02   8.35140991e+01]\n"
+      "[ -9.99999688e+04   2.45072603e+02   6.52795277e+01]\n",
+      "[ -9.99999374e+04   2.29212240e+02   8.33261579e+01]\n"
      ]
     }
    ],
@@ -781,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -790,8 +796,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 366670.08904991  762639.13996421  386290.12479897 ...,  682095.43744553\n",
-      "  585567.28837665  216562.45754607]\n"
+      "[ 366651.41203656  762662.39786164  386312.09499712 ...,  682087.39928241\n",
+      "  585579.27865729  216559.20396617]\n"
      ]
     }
    ],
